third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/signer/triple_signer.exp
script {
    entry fun <SELF>_0(_s: signer, _s2: signer, _s3: signer) {
        ()
    }
}

script {
    entry fun <SELF>_1(_s: signer, _s2: signer, _s3: signer, _u: u64) {
        ()
    }
}

script {
    entry fun <SELF>_2(_s: signer, _s2: signer, _u: u64, _s3: signer) {
        ()
    }
}

script {
    entry fun <SELF>_3(_u: u64, _s2: signer) {
        ()
    }
}

script {
    entry fun <SELF>_4(_s: signer, _u: u64, _s2: signer) {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ triple_signer.move:2:15
  │
2 │     entry fun <SELF>_0(_s: signer, _s2: signer, _s3: signer) {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
